fixed the alignment of the video banner the url cahnged from overview to first-steps through things off

--- a/css/getting-started.css
+++ b/css/getting-started.css
@@ -68,7 +68,6 @@
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    width: 441px;
     margin-top: 8px;
     display: flex;
     flex: 2;
@@ -123,6 +122,7 @@
     font-family: Roboto;
     font-size: 20px;
     flex: 0 50%;
+    margin-right: 10%;
     font-weight: bold;
     font-stretch: normal;
     font-style: normal;
